crates/compylr-host-python/tests/snapshots/emit_quality__emit_aliases.snap
---
source: crates/compylr-host-python/tests/emit_quality.rs
expression: functions.trim()
---
//! Translated by compylr.

use std::collections::{HashMap, HashSet};

use crate::compat::{
    IndexOrigin, PyAdd, PyContains, PyIterate, PyLen, PyNum, PySetItem, RuntimeError,
    TextUnits, div_exact, py_place, py_subscript,
};

pub fn alias_chain(a: bool) -> Result<bool, RuntimeError> {
    let b: bool = a;
    let c: bool = b;
    Ok(c)
}

pub fn alias_local() -> Result<String, RuntimeError> {
    let x: String = String::from("hi");
    let y: String = x.clone();
    Ok(y.clone())
}

pub fn alias_parameter(a: i64) -> Result<i64, RuntimeError> {
    let b: i64 = a;
    Ok(b)
}

pub fn annotated_alias(a: i64) -> Result<i64, RuntimeError> {
    let b: i64 = a;
    Ok(b)
}
