crates/compylr-host-python/tests/snapshots/emit_quality__emit_arithmetic.snap
---
source: crates/compylr-host-python/tests/emit_quality.rs
expression: functions.trim()
---
//! Translated by compylr.

use std::collections::{HashMap, HashSet};

use crate::compat::{
    IndexOrigin, PyAdd, PyContains, PyIterate, PyLen, PyNum, PySetItem, RuntimeError,
    TextUnits, div_exact, py_borrow, py_place, py_subscript,
};

pub fn add(a: i64, b: i64) -> Result<i64, RuntimeError> {
    Ok(PyAdd::py_add(&(a), &(b))?)
}

pub fn difference(a: i64, b: i64) -> Result<i64, RuntimeError> {
    Ok(PyNum::py_sub(&(a), &(b))?)
}

pub fn halve(a: i64) -> Result<i64, RuntimeError> {
    Ok(PyNum::div_floor(&(a), &(2i64))?)
}

pub fn negate(a: i64) -> Result<i64, RuntimeError> {
    Ok(PyNum::py_neg(&(a))?)
}

pub fn remainder(a: i64, b: i64) -> Result<i64, RuntimeError> {
    Ok(PyNum::rem_floor(&(a), &(b))?)
}

pub fn scale(a: i64, b: i64) -> Result<i64, RuntimeError> {
    Ok(PyNum::py_mul(&(a), &(b))?)
}
