crates/compylr-host-python/tests/snapshots/emit_quality__emit_branching.snap
---
source: crates/compylr-host-python/tests/emit_quality.rs
expression: functions.trim()
---
//! Translated by compylr.

use crate::compat::{
    FastMap, FastSet, IndexOrigin, PyAdd, PyAddAssign, PyContains, PyIterate, PyLen,
    PyNum, PySetItem, RuntimeError, TextUnits, div_exact, py_borrow, py_place,
    py_subscript,
};

pub fn clamp(n: i64, low: i64, high: i64) -> Result<i64, RuntimeError> {
    if ((&(n)) < (&(low))) {
        return Ok(low);
    }
    if ((&(n)) > (&(high))) {
        return Ok(high);
    }
    Ok(n)
}

pub fn describe(n: i64) -> Result<String, RuntimeError> {
    let mut label: String = String::from("small");
    if ((&(n)) > (&(100i64))) {
        label = String::from("large");
    }
    Ok(label)
}

pub fn sign(n: i64) -> Result<i64, RuntimeError> {
    if ((&(n)) > (&(0i64))) {
        return Ok(1i64);
    } else {
        if ((&(n)) < (&(0i64))) {
            return Ok(PyNum::py_neg(&(1i64))?);
        } else {
            return Ok(0i64);
        }
    }
}
