crates/compylr-host-python/tests/snapshots/emit_quality__emit_calls.snap
---
source: crates/compylr-host-python/tests/emit_quality.rs
expression: functions.trim()
---
//! Translated by compylr.

use std::collections::{HashMap, HashSet};

use crate::compat::{
    IndexOrigin, NativeAdd, NativeNum, PyAdd, PyContains, PyIterate, PyLen, PyNum,
    PySetItem, RuntimeError, TextUnits, div_exact, py_borrow, py_place, py_subscript,
};

pub fn double(n: i64) -> Result<i64, RuntimeError> {
    Ok(PyNum::py_mul(&(n), &(2i64))?)
}

pub fn nested_expression(a: i64, b: i64) -> Result<i64, RuntimeError> {
    let total: i64 = PyAdd::py_add(&(double(a)?), &(double(b)?))?;
    Ok(total)
}

pub fn quadruple(n: i64) -> Result<i64, RuntimeError> {
    Ok(double(double(n)?)?)
}
