crates/compylr-host-python/tests/snapshots/emit_quality__emit_classes.snap
---
source: crates/compylr-host-python/tests/emit_quality.rs
expression: functions.trim()
---
//! Translated by compylr.

use crate::compat::{
    FastMap, FastSet, IndexOrigin, PyAdd, PyAddAssign, PyAddAssignAt, PyContains,
    PyIterate, PyLen, PyNum, PySetItem, RuntimeError, TextUnits, div_exact,
    py_borrow, py_place, py_str_add, py_str_owned, py_subscript,
};

#[derive(Clone)]
pub struct Cache {
    pub entries: FastMap<i64, i64>,
    pub log: Vec<i64>,
}

impl Cache {
    pub fn __compylr_new() -> Result<Self, RuntimeError> {
        let entries: FastMap<i64, i64> = FastMap::from_iter([]);
        let log: Vec<i64> = vec![];
        Ok(Self { entries, log })
    }

    pub fn has(&self, k: i64) -> Result<bool, RuntimeError> {
        Ok(PyContains::py_contains(&((self).entries.clone()), &(k)))
    }

    pub fn put(&mut self, k: i64, v: i64) -> Result<(), RuntimeError> {
        {
            let __compylr_value = Clone::clone(&(v));
            let __compylr_index = Clone::clone(&(k));
            PySetItem::py_set(&mut ((self).entries), &__compylr_index, __compylr_value)?;
        }
        {
            let __compylr_value = Clone::clone(&(k));
            ((self).log).push(__compylr_value);
        }
        Ok(())
    }

    pub fn size(&self) -> Result<i64, RuntimeError> {
        Ok(PyLen::py_len(&((self).entries), TextUnits::CodePoints))
    }
}

/// Mutable state scoped to an object, which a free function cannot hold.
#[derive(Clone)]
pub struct Counter {
    pub count: i64,
}

impl Counter {
    pub fn __compylr_new(start: i64) -> Result<Self, RuntimeError> {
        let count: i64 = start;
        Ok(Self { count })
    }

    pub fn bump(&mut self, by: i64) -> Result<(), RuntimeError> {
        (self).count = PyAdd::py_add(&((self).count.clone()), &(by))?;
        Ok(())
    }

    pub fn bump_twice(&mut self, by: i64) -> Result<(), RuntimeError> {
        (self).bump(by)?;
        (self).bump(by)?;
        Ok(())
    }

    pub fn get(&self) -> Result<i64, RuntimeError> {
        Ok((self).count.clone())
    }
}

pub fn build(start: i64) -> Result<Counter, RuntimeError> {
    let mut c: Counter = Counter::__compylr_new(start)?;
    (c).bump(1i64)?;
    Ok(c)
}

pub fn read(c: Counter) -> Result<i64, RuntimeError> {
    Ok((c).count.clone())
}
