crates/compylr-host-python/tests/snapshots/emit_quality__emit_comparisons.snap
---
source: crates/compylr-host-python/tests/emit_quality.rs
expression: functions.trim()
---
//! Translated by compylr.

use std::collections::{HashMap, HashSet};

use crate::compat::{
    IndexOrigin, PyAdd, PyContains, PyIterate, PyLen, PyNum, PySetItem, RuntimeError,
    TextUnits, div_exact, py_place, py_subscript,
};

pub fn at_most(a: i64, b: i64) -> Result<bool, RuntimeError> {
    Ok(((&(a)) <= (&(b))))
}

pub fn differs(a: i64, b: i64) -> Result<bool, RuntimeError> {
    Ok(((&(a)) != (&(b))))
}

pub fn greeting() -> Result<String, RuntimeError> {
    Ok(String::from("hello"))
}

pub fn is_even(n: i64) -> Result<bool, RuntimeError> {
    Ok(((&(PyNum::rem_floor(&(n), &(2i64))?)) == (&(0i64))))
}

pub fn nothing() -> Result<(), RuntimeError> {
    Ok(())
}

pub fn truthy() -> Result<bool, RuntimeError> {
    Ok(true)
}
