crates/compylr-host-python/tests/snapshots/emit_quality__emit_cross_source.snap
---
source: crates/compylr-host-python/tests/emit_quality.rs
expression: functions.trim()
---
//! Translated by compylr.

use crate::compat::{
    FastMap, FastSet, IndexOrigin, PyAdd, PyAddAssign, PyAddAssignAt, PyContains,
    PyIterate, PyLen, PyNum, PySetItem, RuntimeError, TextUnits, div_exact,
    py_borrow, py_place, py_subscript,
};

pub fn caller(n: i64) -> Result<i64, RuntimeError> {
    Ok(remote_helper(n)?)
}

pub fn remote_helper(n: i64) -> Result<i64, RuntimeError> {
    Ok(PyAdd::py_add(&(n), &(1i64))?)
}
