crates/compylr-host-python/tests/snapshots/emit_quality__emit_division.snap
---
source: crates/compylr-host-python/tests/emit_quality.rs
expression: functions.trim()
---
//! Translated by compylr.

use std::collections::{HashMap, HashSet};

use crate::compat::{
    IndexOrigin, PyAdd, PyContains, PyIterate, PyLen, PyNum, PySetItem, RuntimeError,
    TextUnits, div_exact, py_place, py_subscript,
};

pub fn halves(a: i64) -> Result<i64, RuntimeError> {
    Ok(PyNum::div_floor(&(a), &(2i64))?)
}

pub fn ratio(a: i64, b: i64) -> Result<f64, RuntimeError> {
    Ok(div_exact(&(((a) as f64)), &(((b) as f64)))?)
}

pub fn remainder(a: i64, b: i64) -> Result<i64, RuntimeError> {
    Ok(PyNum::rem_floor(&(a), &(b))?)
}
