crates/compylr-host-python/tests/snapshots/emit_quality__emit_documented.snap
---
source: crates/compylr-host-python/tests/emit_quality.rs
expression: functions.trim()
---
//! Translated by compylr.

use crate::compat::{
    FastMap, FastSet, IndexOrigin, PyAdd, PyAddAssign, PyAddAssignAt, PyContains,
    PyIterate, PyLen, PyNum, PySetItem, RuntimeError, TextUnits, div_exact,
    py_borrow, py_place, py_subscript,
};

/// Scale a value.
///
///     A longer explanation, spanning several lines, with a blank line above.
///     
pub fn described(n: i64) -> Result<i64, RuntimeError> {
    let doubled: i64 = PyNum::py_mul(&(n), &(2i64))?;
    Ok(doubled)
}

/// Return the sum of two integers.
pub fn summed(a: i64, b: i64) -> Result<i64, RuntimeError> {
    Ok(PyAdd::py_add(&(a), &(b))?)
}

pub fn undocumented(n: i64) -> Result<i64, RuntimeError> {
    Ok(n)
}
